:construction: reconfigurando o controle da pagina Contato

--- a/SistemaCadastroContatos/Views/Home/Index.cshtml
+++ b/SistemaCadastroContatos/Views/Home/Index.cshtml
@@ -1,11 +1,8 @@
-﻿@model HomeModel
-
-@{
-    ViewData["Title"] = "Home Page";
+﻿@{
+    ViewData["Title"] = "Página Inicial";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Bem vindo, @Model.Nome</h1>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit, dolorem eos. Dolorem aliquam facilis corporis ipsa assumenda at odit eum fuga incidunt fugit dolor voluptatum, optio sit laborum reprehenderit quisquam?</p>
-    <span>Email: @Model.Email</span>
+    <h1 class="display-4">Bem vindo!</h1>
+    <p>Sistema de Cadastro de Contatos</p>
 </div>
