--- a/SistemaCadastroContatos/Views/Contato/index.cshtml
+++ b/SistemaCadastroContatos/Views/Contato/index.cshtml
@@ -2,4 +2,71 @@
     ViewData["Title"] = "Lista de Contatos";
 }
 
-<h1>Lista de Contatos</h1>
+
+
+<div class="text-center">
+
+    
+
+    <h1 class="display-4">Lista de Contatos</h1>
+    
+
+    <table class="table table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Nome</th>
+          <th scope="col">E-mail</th>
+          <th scope="col">Celular</th>
+          <th scope="col"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>mark.com</td>
+          <td>312321321312</td>
+          <td>
+            <div class="btn-group" role="group">
+                <a role="button" class="btn btn-primary">Editar</a>
+                <a role="button" class="btn btn-danger">Excluir</a>
+            </div>
+          </td>
+        </tr>
+    
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>jacob.com</td>
+          <td>312321321312</td>
+          <td>
+            <div class="btn-group" role="group">
+                <a role="button" class="btn btn-primary">Editar</a>
+                <a role="button" class="btn btn-danger">Excluir</a>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry the Bird</td>
+          <td>larry.com</td>
+          <td>312321321312</td>
+          <td>
+            <div class="btn-group" role="group">
+                <a role="button" class="btn btn-primary">Editar</a>
+                <a role="button" class="btn btn-danger">Excluir</a>
+            </div>
+          </td>
+        </tr>
+        <tr>
+            <td colspan="5" class="align-middle text-center">
+                <div class="d-flex justify-content-center">
+                    <a class="btn btn-primary" role="button">+</a>
+                </div>
+            </td>
+        </tr>
+
+      </tbody>
+    </table>
+</div>
